# backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py
migration/: env.py
migration/versions/: 0baff566ec85_000000_initial.py  458234a8be84_000000_initial.py  5e5c3211ec47_000000_initial.py  7d485a15414b_000000_initial.py  e60050985fca_000000_initial.py
src/core/: database.py  schema.py  settings.py  setup.py  users_rights.py
src/events/: __init__.py  onshutdown.py  onstartup.py
src/exceptions/: __init__.py  http422_error_handler.py
src/middlewares/: authenticate.py
src/models/: address.py  auth.py  championship.py  delivery.py  direction.py  evaluation.py  participant.py  passport.py  person.py  protocol.py  role.py  task.py  user.py
src/routes/: __init__.py
src/routes/api/: __init__.py
src/routes/api/auth/: __init__.py  auth.py  register.py
src/routes/api/championship/: __init__.py  add.py  delete.py  dump.py  get.py  update.py
src/routes/api/delivery/: __init__.py  add.py  delete.py  dump.py  get.py  update.py
src/routes/api/direction/: __init__.py  add.py  delete.py  dump.py  get.py  update.py
src/routes/api/evaluation/: __init__.py  add.py  delete.py  dump.py  get.py  update.py
src/routes/api/participant/: __init__.py  add.py  delete.py  dump.py  get.py  update.py
src/routes/api/person/: __init__.py  add.py  delete.py  dump.py  get.py  update.py
src/routes/api/protocol/: __init__.py  add.py  assign.py  delete.py  dump.py  get.py  update.py
src/routes/api/task/: add.py  (+5 more)
src/utils/: documentation_statuses.py  jwt.py
(+5 files in other folders)
