[tool.poetry]
name = "meta-champ-backend"
version = "0.1.0"
description = ""
authors = ["ZxXxR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.3"
sqlalchemy = "^2.0.36"
fastcrud = "^0.15.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
loguru = "^0.7.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
setuptools = "^75.2.0"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
